Fixed select styles on firefox android

--- a/src/3-general/form/_select.scss
+++ b/src/3-general/form/_select.scss
@@ -52,7 +52,8 @@ $select-arrow-position: get-side($input-padding, 'right')/2;
   margin: 0 0 $form-spacing;
   padding: $input-padding;
 
-  -webkit-appearance: none;
+  -webkit-appearance:none;
+  -moz-appearance:none;
   appearance: none;
   border: $input-border;
   border-radius: $select-radius;
